# bmb-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
chatter/: __init__.py  bmb_cli.py  server.py
docs/: ROADMAP.md
tests/: test_bmb_cli.py  test_server_tools.py
