[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bmb-chatter"
version = "0.1.0"
description = "MCP server for the BMB programming language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BMB project" },
]
keywords = ["bmb", "mcp", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
bmb-chatter = "chatter.server:main"

[tool.hatch.build.targets.wheel]
packages = ["chatter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
